# peclet-flow

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  build_project.sh  codebase_to_text.py  pyproject.toml  reproduce_cfl_issue.py  sdflow.pyi
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml
cfd_utils/: __init__.py  vti.py
cmake/: PecletDeps.cmake
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
doc/: Robust_Scaled_IBM_Solver.tex  coarse_divfree_mg_report.md  collocated_embed_port_plan.md  collocated_first_order_analysis.md  collocated_second_order_literature.md  collocated_second_order_open_problem.md  current_implementation_plan.md  flow_colocated_plan.md  flow_multigrid_plan.md  ibm_overlay.md  implementation_plan.md  implementation_plan_v1.md  implementation_status_report.md  kokkos_migration_results.md  mpi_parallelization_status.md  multigrid_implementation_plan.md  packing_multires_resolution_report.md  packing_parameter_study_workflow.md  periodic_spheres_plan.md  plan_upgrade_newton_raphson.md  porous_drag_projection_plan.md  porous_drag_scheme.md  re100_stability_report.md  sdflow_colocated_plan.md  sdflow_multigrid_plan.md  sdflow_pnm_parity.md  variable_density_projection.md  variable_viscosity_projection.md  velocity_mg_plan.md  velocity_staggering_refactor_plan.md
doc/colocated_study/: staggered_vs_colocated.md
docs/: Doxyfile
examples/: sdflow_intro.ipynb
kokkos_module/: CMakeLists.txt  binding.cpp  pnm_binding.cpp  ringbed_cfd_compare.py  ringbed_gen_sdf.py  ringbed_gen_sdf_kokkos.py  verify_bfs.py  verify_cavity.py  verify_channel.py  verify_chebyshev.py  verify_implicit_advection.py  verify_periodic_spheres.py  verify_pnm_parity.py  verify_poiseuille.py  verify_velocity_mg.py  verify_velocity_mg_channel.py  verify_velocity_mg_upwind.py
notebooks/: generate_notebook.py  generate_poiseuille_notebook.py  verification_incremental_pressure.ipynb  verification_periodic_spheres.ipynb  verify_poiseuille.ipynb
notebooks/output/: drag_dimensionless_sc.csv
output/: re1000_mixed_tvd_scalar_continuation.csv  re100_mixed_tvd_scalar_continuation.csv  re100_upwind_force_continuation.csv
output/packing_multires_re_targets/: multires_re_targets_attempts.csv  multires_re_targets_summary.csv
packaging/: flow_init.py  flow_pnm_init.py  pyproject-cuda.toml
scripts/: bench_sdflow_vs_pnm.py  bench_velocity_mg_256.py  bench_velocity_mg_bfs.py  benchmark_pressure_phi_multigrid.py  benchmark_sdf_packing_multigrid.py  compare_amr_sdflow_field.py  compare_packing_continuation_extrapolation.py  compare_packing_fieldwise_extrapolation.py  cross_validate_dcfd_vs_pnm.py  cross_validate_sdflow_vs_pnm.py  debug_angled_poiseuille_n32.py  debug_ibm_stencils.py  debug_n32_residual_budget.py  debug_n32_worst.py  diagnose_periodic_spheres.py  diagnose_periodic_spheres_ramp_dt.py  grid_convergence_sdflow_vs_pnm.py  inspect_sdf.py  investigate_poiseuille.py  plot_poiseuille_profiles.py  reproduce_n32_error.py  run_packing_multires_re_targets.py  state_initialization.py  study_avg_velocity_spheres.py  sweep_packing_re_extrapolated.py  test_extraction.py  test_ibm_exactness.py  test_ibm_polynomials.py  test_vmg_cavity.py  three_solver_study.py  tune_periodic_spheres_multigrid.py  tune_sdf_packing_multigrid.py  validate_periodic_spheres_n128.py  validate_zick_homsy_sdflow.py  validate_zick_homsy_sdflow_vs_pnm.py  verify_angled_poiseuille.py  verify_angled_poiseuille_highres.py  verify_angled_poiseuille_steady.py  verify_bfs_sdflow.py  verify_channel_sdflow.py  (+38 more)
src/: bindings.cpp  cfd_solver.cu  cfd_solver.cuh  cfd_solver_ibm.cu  cfd_solver_ibm_kernels.cuh  cfd_solver_multigrid.cu  colocated_advection.hpp  cut_cell_ibm.cuh  cut_cell_ibm.hpp  dcfd_bindings.cu  distributed_ns.cuh  distributed_stokes.cuh  face_props.hpp  flow_bindings.cpp  flow_ibm.hpp  flow_reference.hpp  ghost_projection.hpp  grid_layout.hpp  mac_approx_projection.hpp  mac_bc.cuh  mac_bc.hpp  mac_cutcell.cuh  mac_cutcell.hpp  mac_cutcell_mg.hpp  mac_halo.cuh  mac_ibm.cuh  mac_ibm.hpp  mac_mg.hpp  mac_multigrid.cuh  mac_pressure.hpp  mac_reductions.cuh  mac_reductions.hpp  mac_stencils.hpp  mac_transfer.hpp  mac_velocity_mg.hpp  pnm_bindings.cpp  pore_extraction.cu  pore_extraction.cuh  pore_extraction.hpp  property_closures.hpp  (+9 more)
src/kokkos/: cut_cell_ibm_kokkos.hpp  mac_bc_kokkos.hpp  (+13 more)
tests/: bench_mixed_precision.cu  bench_reductions.cu  bench_velocity_streams.cu  demo_flow_sphere.cu  profile_mg_scaling.cu  profile_sphere_packing.cu  simulate_flow_around_packing.py  test_advdiff_mpi.cu  test_advection_mpi.cu  test_cfd_solver.py  test_cfl_control.py  test_cutcell_operator_mpi.cu  test_distributed_ns.cu  test_distributed_stokes.cu  test_fluid_fractions.py  test_galerkin_mpi.cu  test_gather_vti_mpi.cu  test_gs_implicit_mpi.cu  test_ibm_crash.py  test_ibm_poiseuille_mpi.cu  test_ibm_stencil_mpi.cu  test_implicit_poiseuille.py  test_incremental_pressure_mpi.cu  test_mac_halo.cu  test_mg_projection_mpi.cu  test_multigrid_mpi.cu  test_multigrid_var_mpi.cu  test_navier_stokes_mpi.cu  test_ns_solid_mpi.cu  test_picard_mpi.cu  test_poiseuille_mpi.cu  test_projection_mpi.cu  test_reductions_mpi.cu  test_stokes_mpi.cu  test_stokes_solid_mpi.cu
tests/cuda_bench/: CMakeLists.txt  bench_rbgs.cu
tests/kokkos/: CMakeLists.txt  bench_rbgs.cpp  test_advection.cpp  test_bc.cpp  test_closures.cpp  test_cutcell.cpp  test_field_registry.cpp  test_fou_operator.cpp  test_ibm.cpp  test_ibm_apply.cpp  test_ibm_overlay.cpp  test_mg.cpp  test_poiseuille.cpp  test_poiseuille_ibm.cpp  test_reductions.cpp  test_scalar_transport.cpp  test_sdflow_tg.cpp  test_stencils.cpp  test_transfer.cpp  test_vardensity_projection.cpp  test_variable_mu.cpp
tests/kokkos_mpi/: CMakeLists.txt  test_cutcellmg_mpi.cpp  test_distributed_diffusion.cpp  test_distributed_mg.cpp  test_distributed_pressure.cpp  test_ghost_projection_mpi.cpp  test_graphamg_mpi.cpp  test_multiphysics_mpi.cpp  test_redistribute_mpi.cpp  test_sdflow_colocated_mpi.cpp  test_sdflow_mpi.cpp  test_velocitymg_mpi.cpp
(+29 files in other folders)
