# Python packaging for the `sdflow` CFD solver + the `pnm` pore-network-extraction module.
#
# `pip install .` builds both Kokkos extensions via scikit-build-core and installs them as top-level
# `sdflow` and `pnm` modules. The Kokkos prefix is NOT pulled from PyPI (it is GPU-arch / backend
# specific): point the build at a prefix you bootstrapped once with ../tools/bootstrap_deps.sh by
# exporting CMAKE_PREFIX_PATH. The backend (Serial / OpenMP / CUDA / HIP) is whatever that prefix was
# built for — one source, every environment.
#
#   # CPU / multicore (OpenMP):
#   CMAKE_PREFIX_PATH=/path/to/extern/install/host-openmp pip install .
#
#   # NVIDIA GPU (Snellius) — put nvcc on PATH first:
#   CMAKE_PREFIX_PATH=/path/to/extern/install/nvidia-cuda pip install .
#
# The Python module is single-rank; the multi-rank MPI solver is exercised by the C++ tests/kokkos_mpi
# suite. See ../docs/DEPLOYMENT.md for the full environment matrix and HPC/container recipes.

[build-system]
requires = ["scikit-build-core>=0.8", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "peclet-flow"
version = "0.1.0"
description = "peclet.flow — Kokkos cut-cell IBM incompressible Navier-Stokes solver (+ pnm pore extraction)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Frank Peters", email = "e.a.j.f.peters@gmail.com" }]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/computational-chemical-engineering/peclet"
Documentation = "https://github.com/computational-chemical-engineering/peclet"
Source = "https://github.com/computational-chemical-engineering/sdflow"

[tool.scikit-build]
minimum-version = "0.8"
cmake.version = ">=3.24"
# Both extensions + the peclet/flow package __init__.py files are placed by the CMake install() rules
# (guarded by SKBUILD) into the peclet namespace; disable package auto-discovery so nothing else is added.
wheel.install-dir = "."
wheel.packages = []
sdist.include = ["src", "packaging", "CMakeLists.txt", "README.md", "LICENSE"]
